charity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charity-server
spec:
  selector:
    matchLabels:
      app: charity
  replicas: 1
  template:
    metadata:
      labels:
        app: charity
    spec:
      containers:
        - name: charity-server
          image: lephilong1907/charity:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
