client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: lephilong1907/client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
