server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: charity
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: charity
    spec:
      containers:
        - name: server
          image: lephilong1907/charity:tagversion
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
