client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
