redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  ports:
  - protocol: "TCP"
    port: 6379
    targetPort: 6379
  selector:
    app: redis
