server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: LoadBalancer
  selector:
    app: charity
  ports:
    - protocol: "TCP"
      port: 9090
      targetPort: 9090
