ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - nonprofit.southeastasia.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: nonprofit.southeastasia.cloudapp.azure.com
    http:
      paths:
      - path: /(admin.*)
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80
      - path: /(api.*)
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80
      - path: /(css.*)
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80
      - path: /(js.*)
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80
      - path: /(images.*)
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 80
